--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,24 @@
-
-/* Your CSS Code here. */
+.holder{
+	display:flex;
+	flex-direction:row;
+	justify-content:center;
+	flex-wrap:wrap;
+}
+.three{
+	height:80px;
+	width:80px;
+	font-size:50px;
+	background-color:green;
+}
+.two{
+	height:80px;
+	width:80px;
+	font-size:50px;
+	background-color:red;
+}
+.one{
+	height:80px;
+	width:80px;
+	font-size:50px;
+	background-color:blue;
+}
